# hackathon-fiap-fase-5

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  requirements-notebook.txt  test.db
.claude/: settings.local.json
.claude/skills/: speckit-constitution.md  speckit-implement.md  speckit-plan.md  speckit-specify.md  test.md
.github/workflows/: ci.yml  release.yml
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/plans/: 000-20260706-193018-plan.md  001-20260709-200438-plan.md  003-20260709-component-detection-plan.md
.specify/tasks/: 000-tasks.md  001-tasks.md  003-tasks.md  007-tasks.md
alembic/: env.py  script.py.mako
alembic/versions/: 001_create_jobs_table.py
config/: stride_mappings.yaml  vulnerability_db.yaml
dataset/: .gitattributes  README.md  data.yaml
dataset/train/: labels.cache
dataset/val/: labels.cache
docs/: API-Collection-README.md  divisao-de-trabalho.md  plano-spec-005-implementacao.md  postman-collection.json  sdd.md  spec-005-vulnerability-service.md
docs/bruno-collection/: bruno.json
frontend/: .gitignore  Dockerfile  env.production.example  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
models/: metrics.yaml
notebooks/: 01_train_yolo.ipynb
scripts/: convert_annotations.py  download_dataset.py  generate_synthetic_diagrams.py  run_ci_checks.sh  start-api.ps1  start-api.py  start-api.sh  start-stride.ps1  start-stride.py  start-stride.sh  train_yolo.py  update_vulnerability_db.py  verify_dataset.py
scripts/bash/: check-prerequisites.sh  run_ci_checks.sh  setup-implement.sh  setup-plan.sh  setup.sh  start-stride.sh
scripts/powershell/: setup-implement.ps1  setup-plan.ps1  start-stride.ps1
specs/: sdd.md
specs/features/: 000-domain-contracts.md  001-api-core-scaffolding.md  001-mvp-threat-modeling-stride.md  004-stride-engine.md  (+8 more)
storage/: .gitkeep
tests/: conftest.py
(+505 files in other folders)
