[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hackathon-fiap-fase-5"
version = "0.2.0"
description = "Modelagem de Ameaças com IA (STRIDE) - Hackathon FIAP Fase 5"
authors = ["FIAP Software Security Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic = "^2.0"
pydantic-settings = "^2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
slowapi = "^0.1.0"
python-multipart = "^0.0.9"
orjson = "^3.10.0"
redis = "^5.2.0"
python-magic = "^0.4.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.0"
pytest-cov = "^6.0"
ruff = "^0.9.0"
mypy = "^1.15.0"
aiosqlite = "^0.21.0"  # For testing with SQLite async

[tool.poetry.scripts]
start = "src.api.main:start"

[tool.fastapi]
entrypoint = "src.api.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=60"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
]
ignore = [
    "S101", # Allow assert in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
